--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; transition:opacity 1s; }
-    
-    /* Ảnh full màn hình */
     #finalImage { position:fixed; inset:0; background:#000; display:none; align-items:center; justify-content:center; z-index:998; opacity:0; transition:opacity 2s; }
     #finalImage img { width:100vw; height:100vh; object-fit:cover; }
-
-    /* Chữ Merry Christmas */
     #merry { position:fixed; inset:0; color:#ff3366; font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 80px #ff0066; transition:opacity 3s; text-align:center; padding:20px; }
     #merry span { font-size:64px; color:#00ffff; margin-top:30px; text-shadow:0 0 60px cyan; }
     #merry.active { opacity:1; animation: glow 2.5s infinite alternate; }
-    @keyframes glow { from { text-shadow:0 0 80px #ff0066, 0 0 120px #ff3366; } to { text-shadow:0 0 140px #ff6699, 0 0 200px #ff3366; } }
+    @keyframes glow { from { text-shadow:0 0 80px #ff0066; } to { text-shadow:0 0 160px #ff6699; } }
   </style>
 </head>
 <body>
@@ -47,7 +43,6 @@
     const renderer = new THREE.WebGLRenderer({antialias:true});
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
-    renderer.outputEncoding = THREE.sRGBEncoding;
     document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(camera, renderer.domElement);
@@ -57,14 +52,14 @@
     const globe = new THREE.Group();
     scene.add(globe);
 
-    // === TẠO QUẢ CẦU TUYẾT (giữ nguyên như cũ) ===
+    // Kính bắt click
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120,64,64),
       new THREE.MeshStandardMaterial({color:0xffffff, metalness:0.1, roughness:0, transparent:true, opacity:0.22})
     );
     globe.add(glass);
 
-    // Đế, ribbon, nhãn, nhà, người tuyết, cây thông... (giữ nguyên code cũ của bạn)
+    // Đế + ribbon + nhãn + cảnh trong quả cầu (giữ nguyên như cũ)
     const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513}));
     base.position.y = -150; globe.add(base);
     const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
@@ -83,7 +78,7 @@
     const ground = new THREE.Mesh(new THREE.CircleGeometry(114,64), new THREE.MeshStandardMaterial({color:0xf8faff}));
     ground.rotation.x = -Math.PI/2; ground.position.y = -80; inside.add(ground);
 
-    // Nhà, người tuyết, cây thông... (giữ nguyên)
+    // Nhà, người tuyết, cây thông (giữ nguyên)
     const house = new THREE.Group();
     house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
     const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}));
@@ -124,43 +119,40 @@
     );
     globe.add(snow);
 
-    // Ánh sáng
     scene.add(new THREE.AmbientLight(0xffffff, 0.9));
     const dirLight = new THREE.DirectionalLight(0xffffff, 1.8);
     dirLight.position.set(120, 250, 100);
     scene.add(dirLight);
 
-    // === HỘP QUÀ 3D SIÊU ĐẸP ===
+    // ==================== HỘP QUÀ 3D SIÊU TO KHỔNG LỒ ====================
     const giftGroup = new THREE.Group();
-    giftGroup.position.set(0, -80, 0);
-    giftGroup.scale.set(0,0,0);
+    giftGroup.position.set(0, -120, 0);
+    giftGroup.scale.set(0.01, 0.01, 0.01); // sẽ phóng to sau
     scene.add(giftGroup);
 
     const giftBody = new THREE.Mesh(
-      new THREE.BoxGeometry(80, 80, 80),
-      new THREE.MeshPhysicalMaterial({color:0xff2222, metalness:0.3, roughness:0.2, clearcoat:1, clearcoatRoughness:0.1})
+      new THREE.BoxGeometry(240, 240, 240),
+      new THREE.MeshPhysicalMaterial({color:0xff1122, metalness:0.4, roughness:0.2, clearcoat:1})
     );
-    const giftRibbonV = new THREE.Mesh(new THREE.BoxGeometry(12, 90, 90), new THREE.MeshPhysicalMaterial({color:0xffdd00}));
-    const giftRibbonH = new THREE.Mesh(new THREE.BoxGeometry(90, 90, 12), new THREE.MeshPhysicalMaterial({color:0xffdd00}));
-    const giftBow = new THREE.Mesh(new THREE.TorusGeometry(20, 6, 16, 100), new THREE.MeshPhysicalMaterial({color:0xffdd00}));
-    giftBow.rotation.x = Math.PI/2;
+    const ribbonV = new THREE.Mesh(new THREE.BoxGeometry(36, 270, 270), new THREE.MeshPhysicalMaterial({color:0xffee00}));
+    const ribbonH = new THREE.Mesh(new THREE.BoxGeometry(270, 270, 36), new THREE.MeshPhysicalMaterial({color:0xffee00}));
+    const bow = new THREE.Mesh(new THREE.TorusGeometry(60, 18, 16, 100), new THREE.MeshPhysicalMaterial({color:0xffee00}));
+    bow.rotation.x = Math.PI/2;
 
-    giftGroup.add(giftBody, giftRibbonV, giftRibbonH, giftBow);
+    giftGroup.add(giftBody, ribbonV, ribbonH, bow);
 
-    // Nắp hộp (sẽ bay lên)
     const giftLid = new THREE.Mesh(
-      new THREE.BoxGeometry(82, 20, 82),
-      new THREE.MeshPhysicalMaterial({color:0xee1111, metalness:0.4, roughness:0.2})
+      new THREE.BoxGeometry(244, 60, 244),
+      new THREE.MeshPhysicalMaterial({color:0xee0000, metalness:0.5, roughness:0.2})
     );
-    giftLid.position.y = 50;
+    giftLid.position.y = 150;
     giftGroup.add(giftLid);
 
-    // Ánh sáng phát ra từ hộp quà
-    const giftLight = new THREE.PointLight(0xffaa00, 0, 200);
-    giftLight.position.set(0, -20, 0);
+    const giftLight = new THREE.PointLight(0xffaa00, 0, 600);
+    giftLight.position.set(0, 0, 0);
     giftGroup.add(giftLight);
 
-    // === BIẾN & HIỆU ỨNG ===
+    // ==================== BIẾN & HIỆU ỨNG ====================
     let clickCount = 0, spinSpeed = 0, shake = 0, isExploded = false, giftClicks = 0;
     const countDisplay = document.getElementById('count');
     const fragments = [];
@@ -171,14 +163,28 @@
       if(isExploded) return;
       const x = e.touches ? e.touches[0].clientX : e.clientX;
       const y = e.touches ? e.touches[0].clientY : e.clientY;
-      mouse.x = (x/innerWidth)*2-1;
-      mouse.y = -(y/innerHeight)*2+1;
-      raycaster.setFromCamera(mouse,camera);
+      mouse.x = (x/innerWidth)*2 - 1;
+      mouse.y = -(y/innerHeight)*2 + 1;
+      raycaster.setFromCamera(mouse, camera);
+
       if(raycaster.intersectObject(glass).length > 0){
-        shake = 1; snow.material.size = 9; setTimeout(()=>snow.material.size=5.5,800);
-        clickCount++; countDisplay.textContent = clickCount;
+        shake = 1;
+        snow.material.size = 10;
+        setTimeout(()=>snow.material.size = 5.5, 800);
+        clickCount++;
+        countDisplay.textContent = clickCount;
+
         if(clickCount === 3){
-          setTimeout(explodeGlobe, 800);
+          // XOAY ĐIÊN CUỒNG TRƯỚC KHI NỔ
+          let crazySpin = 0;
+          const spinInterval = setInterval(() => {
+            crazySpin += 0.4;
+            spinSpeed = crazySpin;
+            if(crazySpin > 18){
+              clearInterval(spinInterval);
+              setTimeout(explodeGlobe, 600);
+            }
+          }, 80);
         }
       }
     }
@@ -189,86 +195,93 @@
       isExploded = true;
       document.getElementById('info').style.opacity = 0;
 
-      // Kính vỡ
-      for(let i=0; i<300; i++){
-        const f = new THREE.Mesh(new THREE.PlaneGeometry(8+Math.random()*20,8+Math.random()*20),
-          new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.9,roughness:0.1,transmission:0.95,thickness:8,transparent:true,opacity:0.9})
+      // Kính vỡ đẹp hơn
+      for(let i=0; i<350; i++){
+        const f = new THREE.Mesh(new THREE.PlaneGeometry(10+Math.random()*25,10+Math.random()*25),
+          new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.95,roughness:0.05,transmission:0.98,thickness:10,transparent:true,opacity:0.9})
         );
         f.position.copy(glass.position);
-        const dir = new THREE.Vector3(Math.random()-0.5,Math.random()-0.2,Math.random()-0.5).normalize().multiplyScalar(15+Math.random()*30);
-        f.userData = {vel:dir, rot:new THREE.Vector3(Math.random()*50,Math.random()*50,Math.random()*50)};
+        const dir = new THREE.Vector3(Math.random()-0.5,Math.random()-0.2,Math.random()-0.5).normalize().multiplyScalar(18+Math.random()*35);
+        f.userData = {vel:dir, rot:new THREE.Vector3(Math.random()*60,Math.random()*60,Math.random()*60)};
         scene.add(f); fragments.push(f);
       }
       globe.visible = false;
 
-      // Hiện ảnh full màn hình 3.5 giây
+      // Hiện ảnh full màn hình 3.5s
       setTimeout(() => {
-        document.getElementById('finalImage').style.display = 'flex';
-        setTimeout(() => document.getElementById('finalImage').style.opacity = 1, 100);
+        const img = document.getElementById('finalImage');
+        img.style.display = 'flex';
+        setTimeout(() => img.style.opacity = 1, 100);
         new Audio('music.mp3').play().catch(()=>{});
       }, 1800);
 
-      // Ẩn ảnh → hiện hộp quà 3D
+      // Ẩn ảnh → hiện hộp quà KHỔNG LỒ
       setTimeout(() => {
         document.getElementById('finalImage').style.opacity = 0;
         setTimeout(() => {
           document.getElementById('finalImage').style.display = 'none';
-          giftGroup.scale.set(1,1,1);
-          gsap.to(giftGroup.scale, {x:1.1, y:1.1, z:1.1, duration:0.8, yoyo:true, repeat:3});
+          // Phóng to hộp quà x3 lần
+          giftGroup.scale.set(3, 3, 3);
         }, 2000);
       }, 1800 + 3500);
     }
 
-    // Bấm vào hộp quà 3D
+    // Bấm vào hộp quà 3D khổng lồ
     renderer.domElement.addEventListener('click', (e) => {
-      if(giftClicks >= 3 || giftGroup.scale.x < 0.5) return;
+      if(giftClicks >= 3 || giftGroup.scale.x < 1) return;
       mouse.x = (e.clientX / innerWidth) * 2 - 1;
       mouse.y = -(e.clientY / innerHeight) * 2 + 1;
       raycaster.setFromCamera(mouse, camera);
       if(raycaster.intersectObject(giftBody).length > 0 || raycaster.intersectObject(giftLid).length > 0){
         giftClicks++;
-        giftGroup.rotation.y += 0.3;
-        giftGroup.position.y += 15;
-        gsap.to(giftGroup.position, {y: giftGroup.position.y - 15, duration:0.6, ease:"bounce.out"});
-        giftLight.intensity = giftClicks * 3;
-        if(giftClicks === 3) setTimeout(openGift, 1000);
+        giftGroup.rotation.y += 0.4;
+        giftLight.intensity = giftClicks * 8;
+        // Rung mạnh
+        giftGroup.position.y += 40;
+        setTimeout(() => giftGroup.position.y -= 40, 300);
+        if(giftClicks === 3) setTimeout(openGift, 1200);
       }
     });
 
     function openGift(){
       new Audio('music2.mp3').play().catch(()=>{});
-      gsap.to(giftLid.position, {y: 300, duration: 1.8, ease:"power2.out"});
-      gsap.to(giftLid.rotation, {x: Math.PI*4, duration: 1.8});
-      gsap.to(giftGroup.scale, {x:0, y:0, z:0, duration: 2, delay: 1, onComplete: () => {
+      // Nắp bay lên + xoay
+      giftLid.position.y += 600;
+      giftLid.rotation.x += Math.PI * 6;
+      giftLight.intensity = 50;
+      setTimeout(() => {
+        giftGroup.visible = false;
         document.getElementById('merry').classList.add('active');
-      }});
+      }, 2000);
     }
 
     // Animation loop
     function animate(){
       requestAnimationFrame(animate);
       globe.rotation.y += 0.004 + spinSpeed;
-      giftGroup.rotation.y += 0.008;
+      giftGroup.rotation.y += 0.006;
 
       if(shake > 0.01){
-        globe.rotation.y += Math.sin(performance.now()*0.03)*0.05*shake;
-        globe.rotation.x += Math.sin(performance.now()*0.022)*0.04*shake;
-        shake *= 0.93;
+        globe.rotation.y += Math.sin(performance.now()*0.03)*0.06*shake;
+        globe.rotation.x += Math.sin(performance.now()*0.022)*0.05*shake;
+        shake *= 0.92;
       }
 
+      // Tuyết rơi
       const pos = snow.geometry.attributes.position.array;
       for(let i=1; i<pos.length; i+=3){
-        pos[i] -= 0.9 + spinSpeed*7 + shake*5;
+        pos[i] -= 1 + spinSpeed*8 + shake*6;
         if(pos[i] < -200) pos[i] += 500;
       }
       snow.geometry.attributes.position.needsUpdate = true;
 
+      // Mảnh kính vỡ
       fragments.forEach(f => {
         f.position.add(f.userData.vel);
         f.rotation.x += f.userData.rot.x * 0.04;
         f.rotation.y += f.userData.rot.y * 0.04;
         f.rotation.z += f.userData.rot.z * 0.04;
-        f.userData.vel.y -= 0.5;
+        f.userData.vel.y -= 0.6;
         f.material.opacity *= 0.98;
         if(f.material.opacity < 0.02) scene.remove(f);
       });
@@ -277,11 +290,6 @@
       renderer.render(scene, camera);
     }
     animate();
-
-    // GSAP cho hiệu ứng mượt
-    const script = document.createElement('script');
-    script.src = 'https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js';
-    document.head.appendChild(script);
 
     window.addEventListener('resize', () => {
       camera.aspect = innerWidth/innerHeight;
